Fixed whitespace layout huehuehue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,14 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Slabo+27px');
 
+html {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+}
+
 h1 {
     font-family: 'slabo 27px', serif;
     letter-spacing: 2px;
@@ -24,7 +32,7 @@ body {
     font-size: 14px;
     font-family: 'Lato', sans-serif;
     max-width: 100%;
-    overflow-x: hidden !important;
+    overflow-x: hidden;
 }
 
 .set-pad {
@@ -87,7 +95,6 @@ background-color:#fff;      }
     letter-spacing: 2px;
     min-height: 70px;
 }
-
 
 .navbar-inverse {
     border-color: transparent;
